fix: darker green for contrast

--- a/css/site.css
+++ b/css/site.css
@@ -1,6 +1,7 @@
 :root {
 
-    --mycolor: 117, 21%, 43%;
+    /* 117, 21%, 43% */
+    --mycolor: 119, 21%, 39%;
 
     /* белый */
     --white: ##FDFDFD;
